<resources>
    <string name="app_name">Places</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="mark_location">Mark Location</string>
    <string name="stop_tracking">Stop Tracking</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="there_are_no_items_to_clear">There are no items to clear.</string>
    <string name="ok">OK</string>
    <string name="are_you_sure_to_delete_unsaved_places">Are you sure you want to permanently delete unsaved places?</string>
    <string name="no">No</string>
    <string name="clear">Clear</string>
    <string name="recent_places">Recent Places</string>
    <string name="summary">Summary</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="delete_forever_without_saving">Delete this record forever ?</string>
    <string name="search_places">Search places . . .</string>
    <string name="places">Places</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="wander">Wander</string>
    <string name="travel">Travel</string>
    <string name="place">Place</string>
    <string name="wanders">Wanders</string>
    <string name="travels">Travels</string>
    <string name="a_new_place">A New Place</string>


</resources>
